<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Test</name>
	<groupId>com.wiki.qa</groupId>
	<artifactId>Wikia</artifactId>
	<version>1.0-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.2.3</version>
		</dependency>
		<dependency>
			<groupId>net.kennychua</groupId>
			<artifactId>phantomjs-qunit-runner</artifactId>
			<version>1.0.14</version>
		</dependency>
		<dependency>
			<groupId>biz.neustar</groupId>
			<artifactId>browsermob-proxy</artifactId>
			<version>2.0-beta-7</version>
		</dependency>
		<dependency>
   			<groupId>xmlunit</groupId>
   			<artifactId>xmlunit</artifactId>
   			<version>1.3</version>
		</dependency>
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-chrome-driver</artifactId>
		    <version>2.33.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.7</version>
		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>2.33.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.33.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>2.33.0</version>
		</dependency>
		<dependency>
         		<groupId>org.apache.httpcomponents</groupId>
        		<artifactId>httpclient</artifactId>
			<version>4.2.5</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.4</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>com.github.detro.ghostdriver</groupId>
			<artifactId>phantomjsdriver</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.3</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<systemPropertyVariables>
						<run_mvn>true</run_mvn>
						<base-address>${base-address}</base-address>
						<live-domain>${live-domain}</live-domain>
						<browser>${browser}</browser>
						<env>${env}</env>
						<qs>${qs}</qs>
						<config>/selenium-config/config.xml</config>
						<captcha>/selenium-config/captcha.txt</captcha>
					</systemPropertyVariables>
					<suiteXmlFiles>
						<suiteXmlFile>src/test/java/com/wikia/webdriver/TestSuites/testSuite.xml</suiteXmlFile>
					</suiteXmlFiles>
					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
			<configuration>
				<filesets>
					<fileset>
						<directory>${base-path}/logs</directory>
						<followSymlinks>false</followSymlinks>
					</fileset>
				</filesets>
			</configuration>
			</plugin>
		</plugins>
	</build>
</project>
